--- a/src/assets/scss/mixin.scss
+++ b/src/assets/scss/mixin.scss
@@ -9,6 +9,24 @@
     display: inline-block;
     width: $w;
     height: $h;
-    background: url($img)no-repeat center;
+    background: url($img) no-repeat center;
     background-size: $size;
+}
+
+@mixin position($pos:absolute, $top:0, $left:0, $w:100%, $h:100%) {
+    position: $pos;
+    top: $top;
+    left: $left;
+    width: $w;
+    height: $h;
+}
+
+@mixin positionImg($pos:absolute, $top:0, $right:0, $w:0, $h:0, $img:'') {
+    position: $pos;
+    top: $top;
+    right: $right;
+    width: $w;
+    height: $h;
+    background: url($img) no-repeat center;
+    background-size: contain;
 }
